# deepcadrt_run

./: LICENSE  README.md  pyproject.toml  test_config.json  train_config.json
src/deepcadrt_run/: __init__.py  test_config.json  train_config.json
