[project]
name = "deepcadrt-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christoph Sommer", email = "christoph.sommer@ist.ac.at" }
]
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "rich>=14.2.0",
    "torch==2.5.1", 
    "torchvision==0.20.1",
    "deepcad==1.2.0",
    "setuptools<81", # required for gdown, which is pinned in deepcad
    "onnx", # again this deepcad dep is not set in deepcad
    "numpy=1.26.4" # 
]

[project.scripts]
deepcadrt-train = "deepcadrt_run:train"
deepcadrt-predict = "deepcadrt_run:predict"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
